--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -123,9 +123,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rivers</h3>
+    
+    <img src="images/wireframe_rivers.png" alt="Rivers wireframe">    
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
 
