--- a/dpad/site-plan.html
+++ b/dpad/site-plan.html
@@ -99,8 +99,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Products</a>
+        <a href="#">Recipes</a>
       </nav>
       <hr>
       <h2>
@@ -111,10 +111,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Products 
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Recipes  
         </div>
 
         <div class="top">
@@ -136,30 +136,124 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Aunt Dimel's yogurt shop is inspired by Greek culture and cuisine. We are dedicated to providing a nutritious and alternative solution to regular meals, focusing on healthy lifestyles through our nutrient-rich and delicious food options.
+        Our mission is to influence and inspire good nutrition and healthy eating habits. We are passionate about providing quality and raising awareness that impacts society, creating lasting change that educates and maintains healthy eating habits. We are motivated to promote and foster the growth of living well through our diverse and eclectic menu options.
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
 
-      </ul>
-      <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        GREEK YOGURT NUTRITION BENEFITS
+        Greek isn’t just a fancy name for yogurt. It’s for people who go BIG on nutrition and taste — like you. Good source of calcium? Yeah, that’s us. Want less lactose? Greek yogurt has less lactose than regular yogurt due to the straining process.
+        You could say Greek yogurt is protein-famous, but that’s just part of the story. You’ll find a whole bunch of other epic benefits in every serving.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
-      </ul>
-      <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        CULTURES
+        Cultures are the key to turning milk into yogurt. (In our case, ultra-creamy Greek yogurt.) They also do the all-important job of helping break down the lactose in milk.
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>
+        LACTOSE
+        Because of the way it’s strained, Greek yogurt contains less lactose, and therefore less total sugar and fewer total carbs than the base of regular yogurt.
+      </p>
+      <p>
+        GLUTEN FREE
+        No worries here: our Greek yogurt does not contain gluten, and doesn’t come into contact with ingredients that contain gluten during the production process.
+      </p>
+      <p>  
+        CALCIUM
+        It’s a must for supporting strong bones, and you’ll find a good source of it in every 5.3-ounce serving of Oikos.
+        PROTEIN
+        Every 5.3-ounce serving has at least 11 grams of high-quality protein, which means your muscles are going to love it
+      </p>
+      <p>
+        THE GREAT GREEK YOGURT VS. REGULAR YOGURT SMACKDOWN
 
+        It takes about 2.5X more milk to make Greek yogurt than standard yogurt. That explains all that awesome protein.
+        Greek yogurt is WAY thicker and creamier than regular yogurt. So, recipes love it right up.
+        Individual flavors may vary, but because of the way it’s strained, Greek yogurt can be lower in total sugar than regular yogurt. Which also means lower in total carbs. If that’s what you’re into, you’re totally welcome.
+      </p>
+      <p>Images for the Home page</p>        
+        <img src="images/hero.jpg" alt="Hero image for homepage" height="300px" width="500px">         
+        <br/>
+        <img src="images/greekYogurtTexture.jpg" alt="Background image" height="300px" width="500px">
+        <br/>
+        <img src="images/home1.jpg" alt="home 1" height="480px" width="320px">
+        <br/>
+        <img src="images/home2.jpg" alt="home 2" height="480px" width="320px">
+        <br/>
+        <img src="images/home3.jpg" alt="home 3" height="480px" width="320px">
+        <br/>
+        <img src="images/home4.jpg" alt="home 4" height="480px" width="320px">
+      </ul>
+      <h3>Products</h3>
+      <p>
+        OUR PRODUCTS<br />
+        We get the sugar out of milk through natural fermentation, where live, active yogurt cultures and probiotics eat the sugars found in milk. A one-of-a-kind sugar-free product, sweetened only with natural, non-GMO sugar alternatives.
+      </p>
+      <p>Images for the page Products</p>
+        <img src="images/chocolate.jpg" alt="Chocolate" height="240px" width="160px">         
+        <br/>        
+        <img src="images/coconut.jpg" alt="Coconut" height="240px" width="160px">         
+        <br/>
+        <img src="images/greekhoney.jpg" alt="Greekhoney" height="240px" width="200px">         
+        <br/>  
+        <img src="images/peanutbutter.jpg" alt="peanutbutter" height="240px" width="200px">         
+        <br/>           
+      </ul>
+      <h3>Recipes</h3>
+      <p>
+        Be Inspired
+        From the simplest recipes to the most sophisticated menus, when you use Aunt Dimel greek yogurt in the kitchen, it’s simply delicious.
+      </p>
+      <p>
+        COOKIES & CREAM STRAWBERRY PARFAIT
+
+        INGREDIENTS
+        1 (5.3-ounce) FAGE Total Blended Strawberry
+        4 chocolate sandwich cookies, divided
+        6 strawberries, hulled and diced
+
+        STEPS
+        In a storage bag, add 3 chocolate sandwich cookies. Roll a baking pin over the storage bag to crumble the cookies.
+        Layer half of the Greek yogurt to the bottom of a small glass.
+        Add strawberries and another small layer of yogurt. Add the cookie crumbles, then the rest of the yogurt, and top with the remaining strawberries and a cookie.
+      </p>  
+      <p>
+        SWEET SUMMER SMOOTHIE
+
+        INGREDIENTS
+        1 cup Oikos® Vanilla Greek Yogurt
+        1/2 cup frozen strawberries, unsweetened*
+        1/2 cup frozen peach slices, unsweetened*
+        1/2 medium banana, peeled
+        1/2 cup of low-fat milk
+        *If using fresh fruit add 2/3 cup ice to the recipe
+
+        STEPS
+        Place all ingredients in a blender; process until smooth and serve immediately.
+      </p>
+      <p>
+        CHOCOLATE MUDSLIDE SMOOTHIE
+        INGREDIENTS
+        1 cup ice
+        2 cups Greek Yogurt 
+        5 tablespoons chocolate sauce
+        2 ounces Irish cream (optional)
+        2 ounces coffee liqueur (optional)
+        Garnish:
+        Chocolate sauce
+        Cocoa nibs or chocolate chips
+
+        STEPS
+        Add chocolate sauce to the inside wall of 2 tall glasses. Place into the freezer.
+        Combine ice, yogurt, Irish cream, coffee liqueur, and chocolate sauce in a blender and blend until smooth. Pour into prepared glasses.
+        Top with extra yogurt, chocolate sauce, and cocoa nibs.
+      </p>
+      <p>Images for the Page Recipes</p>
+        <img src="images/ChocolateMudslideSmoothie.jpg" alt="Chocolate Mudslide Smoothie" height="410px" width="400px">         
+        <br/> 
+        <img src="images/CookiesCreamStrawberryParfait.jpg" alt="Cookies Cream Strawberry Parfait" height="410px" width="380px">         
+        <br/> 
+        <img src="images/SweetSummerSmoothie.jpg" alt="Sweet Summer Smoothie" height="410px" width="380px">         
+        <br/> 
       </ul>
       <hr>
       <h2>
