Updating text content from site plan

--- a/dpad/site-plan.html
+++ b/dpad/site-plan.html
@@ -159,7 +159,7 @@
       </p>
       <p>  
         CALCIUM
-        It’s a must for supporting strong bones, and you’ll find a good source of it in every 5.3-ounce serving of Oikos.
+        It’s a must for supporting strong bones, and you’ll find a good source of it in every 5.3-ounce serving.
         PROTEIN
         Every 5.3-ounce serving has at least 11 grams of high-quality protein, which means your muscles are going to love it
       </p>
@@ -207,7 +207,7 @@
         COOKIES & CREAM STRAWBERRY PARFAIT
 
         INGREDIENTS
-        1 (5.3-ounce) FAGE Total Blended Strawberry
+        1 (5.3-ounce) Greek Yogurt
         4 chocolate sandwich cookies, divided
         6 strawberries, hulled and diced
 
@@ -220,7 +220,7 @@
         SWEET SUMMER SMOOTHIE
 
         INGREDIENTS
-        1 cup Oikos® Vanilla Greek Yogurt
+        1 cup of Greek Yogurt
         1/2 cup frozen strawberries, unsweetened*
         1/2 cup frozen peach slices, unsweetened*
         1/2 medium banana, peeled
@@ -236,15 +236,14 @@
         1 cup ice
         2 cups Greek Yogurt 
         5 tablespoons chocolate sauce
-        2 ounces Irish cream (optional)
-        2 ounces coffee liqueur (optional)
+        2 ounces Irish cream (optional)        
         Garnish:
         Chocolate sauce
         Cocoa nibs or chocolate chips
 
         STEPS
         Add chocolate sauce to the inside wall of 2 tall glasses. Place into the freezer.
-        Combine ice, yogurt, Irish cream, coffee liqueur, and chocolate sauce in a blender and blend until smooth. Pour into prepared glasses.
+        Combine ice, yogurt, Irish cream and chocolate sauce in a blender and blend until smooth. Pour into prepared glasses.
         Top with extra yogurt, chocolate sauce, and cocoa nibs.
       </p>
       <p>Images for the Page Recipes</p>
