--- a/dpad/site-plan.html
+++ b/dpad/site-plan.html
@@ -261,23 +261,14 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+      <h3>Home</h3>  
+      <img src="images/home_wireframe.png" alt="Home wireframe">
 
-      <h3>[Page 2]</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+      <h3>Products</h3>      
+      <img src="images/products_wireframe.png" alt="Products wireframe">
 
-      <h3>[Page 3]</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+      <h3>Recipes</h3>      
+      <img src="images/recipes_wireframe.png" alt="Recipes wireframe">      
     </main>
   </body>
 
