adding somw tweaks for week 10

--- a/dpad/index.html
+++ b/dpad/index.html
@@ -19,7 +19,7 @@
                 <a href="recipes.html">Recipes</a>
                 <a href="site-plan.html">Site Plan</a>
                 <div class='button-box'>
-                    <a class='book'>Order Online</a>
+                    <a class='order-online'>Order Online</a>
                 </div>
             </nav>
         </header>
