--- a/dpad/products.html
+++ b/dpad/products.html
@@ -25,7 +25,7 @@
         </header>
         <div id="products">
             <div id="products-box">
-                <img id="products-img" src="images/greekYogurtTexture.jpg" alt="People enjoying white water rafting">                
+                <img id="products-img" src="images/greekYogurtTexture.jpg" alt="Greek yogurt texture">                
             </div> 
             <section id="products-msg">
                 <h1 class="home-title">OUR PRODUCTS</h1>
