adding more tweaks for week 10

--- a/dpad/index.html
+++ b/dpad/index.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo">
+                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo" height=300px width=300px>
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -19,19 +19,19 @@
                 <a href="recipes.html">Recipes</a>
                 <a href="site-plan.html">Site Plan</a>
                 <div class='button-box'>
-                    <a class='order-online'>Order Online</a>
+                    <a class='button'>Order Online</a>
                 </div>
             </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.jpg" alt="People enjoying white water rafting">
+                <img id="hero-img" src="images/hero.jpg" alt="greek yogurt with fruits" height=300px width=500px>
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">GREEK YOGURT AUNT DIMEL</h1>
                 <h4>DELICIOUS, CREAMY YOGURT THE WHOLE FAMILY WILL LOVE</h4>                
                 <div class='button-box'>
-                    <a class='book' href="products.html">VIEW PRODUCTS</a>
+                    <a class='button' href="products.html">VIEW PRODUCTS</a>
                 </div>
             </section>
         </div>
