--- a/dpad/products.html
+++ b/dpad/products.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo">
+                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo" height=300px width=300px>
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         </header>
         <div id="products">
             <div id="products-box">
-                <img id="products-img" src="images/greekYogurtTexture.jpg" alt="Greek yogurt texture">                
+                <img id="products-img" src="images/greekYogurtTexture.jpg" alt="Greek yogurt texture" height=300px width=500px>                
             </div> 
             <section id="products-msg">
                 <h1 class="home-title">OUR PRODUCTS</h1>
