--- a/dpad/recipes.html
+++ b/dpad/recipes.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo">
+                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo" height=300px width=300px>
             </a>
             <nav>
                 <a href="index.html">Home</a>
