Adding style.css

--- a/dpad/index.html
+++ b/dpad/index.html
@@ -11,27 +11,27 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo" height=300px width=300px>
+                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a href="recipes.html">Recipes</a>
-                <a href="site-plan.html">Site Plan</a>
-                <div class='button-box'>
-                    <a class='button'>Order Online</a>
-                </div>
+                <a href="site-plan.html">Site Plan</a>                
             </nav>
+            <div class='order-online-button'>
+                <a class='book'>Order Online</a>
+            </div>
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.jpg" alt="greek yogurt with fruits" height=300px width=500px>
+                <img id="hero-img" src="images/hero.jpg" alt="greek yogurt with fruits">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">GREEK YOGURT AUNT DIMEL</h1>
                 <h4>DELICIOUS, CREAMY YOGURT THE WHOLE FAMILY WILL LOVE</h4>                
                 <div class='button-box'>
-                    <a class='button' href="products.html">VIEW PRODUCTS</a>
+                    <a class='book' href="products.html">VIEW PRODUCTS</a>
                 </div>
             </section>
         </div>
