--- a/dpad/index.html
+++ b/dpad/index.html
@@ -20,7 +20,7 @@
                 <a href="site-plan.html">Site Plan</a>                
             </nav>
             <div class='order-online-button'>
-                <a class='book'>Order Online</a>
+                <a class='order-online'>Order Online</a>
             </div>
         </header>
         <div id="hero">
@@ -67,19 +67,26 @@
             </section>
             <section class="smackdown">
                 <div id="background">
-                    <h2 class="smackdown_header">THE GREAT GREEK YOGURT VS. REGULAR YOGURT SMACKDOWN</h2>
-                    <section class="smackdown_message">
-                        <p>It takes about 2.5X more milk to make Greek yogurt than standard yogurt. That explains all that awesome protein.</p>
-                        <p>Greek yogurt is WAY thicker and creamier than regular yogurt. So recipes love it right up.</p>
-                        <p>Individual flavors may vary, but because of the way it’s strained, Greek yogurt can be lower in total sugar than regular yogurt. Which also means lower in total carbs. If that’s what you’re into, you’re totally welcome.</p>                        
-                    </section>                                        
-                </div>                           
-                <img  src="images/home2.jpg" alt="Home 2" width="200px" height="200px">
+                    <h2 class="smackdown_header">THE GREAT GREEK YOGURT VS. REGULAR YOGURT SMACKDOWN</h2>                                                            
+                </div>                                                           
             </section>
+            <section class="smackdown_message1">
+                <p class="smackdown_text">It takes about 2.5X more milk to make Greek yogurt than standard yogurt. That explains all that awesome protein.</p>               
+            </section>
+            <section class="smackdown_message2">
+                <p class="smackdown_text">Greek yogurt is WAY thicker and creamier than regular yogurt. So recipes love it right up.</p>               
+            </section>
+            <section class="smackdown_message3">
+                <p class="smackdown_text">Individual flavors may vary, but because of the way it’s strained, Greek yogurt can be lower in total sugar than regular yogurt. Which also means lower in total carbs.</p>
+            </section>
+            <section class="smackdown_image">
+                <img  src="images/home2.jpg" alt="Home 2">
+            </section>            
+
             
         </main>
         <footer>
-            <p>Aunt Dimel &copy; 2022 - Roberto Uriona</p>
+            <p>Aunt Dimel &copy; 2022</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
