Last changes for home page

--- a/dpad/index.html
+++ b/dpad/index.html
@@ -65,10 +65,14 @@
                 <h3>Calcium</h3>
                 <p>It’s a must for supporting strong bones, and you’ll find a good source of it in every 5.3-ounce serving. PROTEIN Every 5.3-ounce serving has at least 11 grams of high-quality protein, which means your muscles are going to love it</p>
             </section>
-            <section class="smackdown">
-                <div id="background">
-                    <h2 class="smackdown_header">THE GREAT GREEK YOGURT VS. REGULAR YOGURT SMACKDOWN</h2>                                                            
-                </div>                                                           
+            <section class="smackdown1">
+                <div id="background1"></div>                
+            </section>
+            <section class="smackdown2">
+                <div id="background2"></div>                
+            </section>
+            <section class="smackdown-header">
+                <h2 class="smackdown_header">THE GREAT GREEK YOGURT VS. REGULAR YOGURT SMACKDOWN</h2>
             </section>
             <section class="smackdown_message1">
                 <p class="smackdown_text">It takes about 2.5X more milk to make Greek yogurt than standard yogurt. That explains all that awesome protein.</p>               
