Adding products.html

--- a/dpad/products.html
+++ b/dpad/products.html
@@ -11,17 +11,17 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo" height=300px width=300px>
+                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a href="recipes.html">Recipes</a>
-                <a href="site-plan.html">Site Plan</a>
-                <div class='button-box'>
-                    <a class='book'>Order Online</a>
-                </div>
+                <a href="site-plan.html">Site Plan</a>                
             </nav>
+            <div class='order-online-button'>
+                <a class='order-online'>Order Online</a>
+            </div>
         </header>
         <div id="products">
             <div id="products-box">
@@ -32,26 +32,26 @@
                 <h4>We get the sugar out of milk through natural fermentation, where live, active yogurt cultures and probiotics eat the sugars found in milk. A one-of-a-kind sugar-free product, sweetened only with natural, non-GMO sugar alternatives</h4>                
             </section>           
         </div>
-        <main class="home-grid">                      
+        <main class="products-grid">                      
             <section class="chocolate-card">
-                <img class="card-img" src="images/chocolate.jpg" alt="chocolate">
+                <img class="product-card-img" src="images/chocolate.jpg" alt="chocolate">
                 <h3>CHOCOLATE</h3>                
             </section>
             <section class="coconut-card">
-                <img class="card-img" src="images/coconut.jpg" alt="coconut">
+                <img class="product-card-img" src="images/coconut.jpg" alt="coconut">
                 <h3>COCONUT</h3>                
             </section>
             <section class="greek-honey-card">
-                <img class="card-img" src="images/greekhoney.jpg" alt="greek honey">                
+                <img class="product-card-img" src="images/greekhoney.jpg" alt="greek honey">                
                 <h3>GREEK HONEY</h3>                
             </section>
             <section class="peanut-butter-card">
-                <img class="card-img" src="images/peanutbutter.jpg" alt="protein">                
+                <img class="product-card-img" src="images/peanutbutter.jpg" alt="protein">                
                 <h3>PEANUT BUTTER</h3>                
             </section>
         </main>
         <footer>
-            <p>Aunt Dimel &copy; 2022 - Roberto Uriona</p>
+            <p>Aunt Dimel &copy; 2022</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
