html error fixed

--- a/dpad/products.html
+++ b/dpad/products.html
@@ -25,7 +25,7 @@
         </header>
         <div id="products">
             <div id="products-box">
-                <img id="products-img" src="images/greekYogurtTexture.jpg" alt="Greek yogurt texture" height=300px width=500px>                
+                <img id="products-img" src="images/greekYogurtTexture.jpg" alt="Greek yogurt texture" height=300 width=500>                
             </div> 
             <section id="products-msg">
                 <h1 class="home-title">OUR PRODUCTS</h1>
