Adding the third page

--- a/dpad/recipes.html
+++ b/dpad/recipes.html
@@ -11,82 +11,82 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo" height=300px width=300px>
+                <img class="logo" src="images/logo.png" alt="Aunt Dimel Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a href="recipes.html">Recipes</a>
-                <a href="site-plan.html">Site Plan</a>
-                <div class='button-box'>
-                    <a class='book'>Order Online</a>
-                </div>
+                <a href="site-plan.html">Site Plan</a>                
             </nav>
+            <div class='order-online-button'>
+                <a class='order-online'>Order Online</a>
+            </div>
         </header>
         <div id="recipes">
             <div id="recipes-box">
-                <img id="recipes-img" src="images/home1.jpg" alt="Recipes">                
+                <img id="recipes-img" src="images/hero.jpg" alt="Recipes">
             </div> 
             <section id="recipes-msg">
                 <h1 class="home-title">AUNT DIMEL IN THE KITCHEN</h1>                
             </section>           
         </div>
-        <main class="recipes-grid">                      
-            <section class="strawberry-parfait-card">                
-                <h2>COOKIES & CREAM STRAWBERRY PARFAIT</h2>
-                <h3>INGREDIENTS</h3>
-                <ul>
+        <main class="recipes-grid">   
+            <div class="recipe-list">
+                <h2 id="recipe-name1">COOKIES & CREAM STRAWBERRY PARFAIT</h2>
+                <h4 id="recipe-ingredient1">INGREDIENTS</h4>
+                <ul id="ulist1">
                     <li>1 (5.3-ounce) Greek Yogurt</li>
                     <li>4 chocolate sandwich cookies, divided</li>
                     <li>6 strawberries, hulled and diced</li>
                 </ul>
-                <h3>STEPS</h3>
-                <ol>
+                <h4 id="steps1">STEPS</h4>
+                <ol id="olist1">
                     <li>In a storage bag, add 3 chocolate sandwich cookies.</li>
                     <li>Roll a baking pin over the storage bag to crumble the cookies.</li>
                     <li>Layer half of the Greek yogurt to the bottom of a small glass.</li>
                     <li>Add strawberries and another small layer of yogurt.</li>
                     <li>Add the cookie crumbles, then the rest of the yogurt, and top with the remaining strawberries and a cookie.</li>
                 </ol>
-                <img class="recipe-card-img" src="images/cookiesCreamStrawberryParfait.jpg" alt="strawberry-parfait">                
-            </section>
-            <section class="sweet-summer-smoothie-card">
-                <h2>SWEET SUMMER SMOOTHIE</h2>
-                <h3>INGREDIENTS</h3>
-                <ul>
+                <img id="recipe-img1" src="images/cookiesCreamStrawberryParfait.jpg" alt="strawberry-parfait">
+            </div>
+            <div class="recipe-list">
+                <h2 id="recipe-name2">SWEET SUMMER SMOOTHIE</h2>
+                <h4 id="recipe-ingredient2">INGREDIENTS</h4>
+                <ul id="ulist2">
                     <li>1 cup of Greek Yogurt</li>
                     <li>1/2 cup frozen strawberries, unsweetened</li>
                     <li>1/2 medium banana, peeled</li>
                     <li>1/2 cup of low-fat milk</li>
                     <li>If using fresh fruit add 2/3 cup ice to the recipe</li>
                 </ul>
-                <h3>STEPS</h3>
-                <ol>
+                <h4 id="steps2">STEPS</h4>
+                <ol id="olist2">
                     <li>Place all ingredients in a blender</li>
                     <li>Process until smooth and serve immediately</li>                    
                 </ol>
-                <img class="recipe-card-img" src="images/sweetSummerSmoothie.jpg" alt="sweet summer smoothie">
-            </section>
-            <section class="chocolate-mudslide-smoothie-card">
-                <h2>CHOCOLATE MUDSLIDE SMOOTHIE</h2>
-                <h3>INGREDIENTS</h3>
-                <ul>
+                <img id="recipe-img2" src="images/sweetSummerSmoothie.jpg" alt="sweet summer smoothie">
+            </div>
+            <div class="recipe-list">
+                <h2 id="recipe-name3">CHOCOLATE MUDSLIDE SMOOTHIE</h2>
+                <h4 id="recipe-ingredient3">INGREDIENTS</h4>
+                <ul id="ulist3">
                     <li>1 cup ice</li>
                     <li>2 cups Greek Yogurt</li>
                     <li>5 tablespoons chocolate sauce</li>
                     <li>2 ounces Irish cream (optional)</li>
                     <li>Garnish: Chocolate sauce Cocoa nibs or chocolate chips </li>
                 </ul>
-                <h3>STEPS</h3>
-                <ol>
+                <h4 id="steps3">STEPS</h4>
+                <ol id="olist3">
                     <li>Add chocolate sauce to the inside wall of 2 tall glasses.</li>
                     <li>Place into the freezer.</li>
                     <li>Combine ice, yogurt, Irish cream and chocolate sauce in a blender and blend until smooth.</li>
                     <li>Pour into prepared glasses.</li>
                     <li>Top with extra yogurt, chocolate sauce, and cocoa nibs.</li>
                 </ol>
-                <img class="recipe-card-img" src="images/chocolateMudslideSmoothie.jpg" alt="chocolate mudslide smoothie">
-            </section>            
+                <img id="recipe-img3" src="images/chocolateMudslideSmoothie.jpg" alt="chocolate mudslide smoothie">
+            </div>   
         </main>
         <footer>
             <p>Aunt Dimel &copy; 2022 - Roberto Uriona</p>
